Applied the toggle button which was something i've never done with some help. Added the check icon next to the list and applied the correct coloring to my button. First time using media query to which I applied flex-direction:column; to the bottom-half and top-half of the content section. This makes it responsive for mobile users. Now it's time apply a slider.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@
 <div class="content">
     <div class="top-half">
         <div class="numbers">
-            <p>PAGEVIEWS</p>
-            <p>$ /month</p>
+            <p>200K PAGEVIEWS</p>
+            <p><span class="dollars">$20</span> /month</p>
         </div>
         <div class="toggle">
-                <p>Monthly Billing</p>
-                <p>Yearly Billing <sub>25% discount</sub></p>
+                <p>Monthly Billing
+                    <label class="switch">
+                        <input type="checkbox">
+                        <span class="slider round"></span>
+                    </label>
+                </p>
+                <p>Yearly Billing <span class="discount">25% discount</span></p>
         </div>
     </div>
     <hr>
