Applied a slider using input[type=range]. This is my first time using the tag. Applied the correct css to it. Fixed up some of the layout for the mobile side. Now need to implement JavaScript into my code to make texts responsive to the slider.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
 <div class="content">
     <div class="top-half">
         <div class="numbers">
-            <p>200K PAGEVIEWS</p>
-            <p><span class="dollars">$20</span> /month</p>
+            <p class="pageviews"><span class="view"></span>PAGEVIEWS</p>
+            <p class="monthly-cost"><span class="dollars">$</span> /month</p>
         </div>
+        <div class="slide-container">
+                <input type="range" min="0" max="4" step="1" id="mySlider"> <!-- First time using input. The type specifies what input you are looking for.  -->
+            </div>
         <div class="toggle">
                 <p>Monthly Billing
                     <label class="switch">
